force-app/main/default/objects/Clinician_Report__c/Clinician_Report__c.object-meta.xml
<CustomObject>
    <label>Clinician Report</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Clinician Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinician Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>