force-app/main/default/objects/Clinician_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clinician Reports</relationshipLabel>
    <relationshipName>Clinician_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>