force-app/main/default/objects/Clinician_Report__c/fields/Clinical_Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Report_ID__c</fullName>
    <externalId>true</externalId>
    <label>Clinical Report ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>