force-app/main/default/objects/Clinician_Report__c/fields/isDownloaded__c.field-meta.xml
<CustomField>
    <fullName>isDownloaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDownloaded</label>
    <type>Checkbox</type>
</CustomField>