force-app/main/default/objects/Clinician_Report__c/fields/isReportAvailable__c.field-meta.xml
<CustomField>
    <fullName>isReportAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReportAvailable</label>
    <type>Checkbox</type>
</CustomField>