force-app/main/default/objects/Clinician_Report__c/fields/IsUnsolicited__c.field-meta.xml
<CustomField>
    <fullName>IsUnsolicited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUnsolicited</label>
    <type>Checkbox</type>
</CustomField>