force-app/main/default/objects/Clinician_Report__c/fields/PlacerOrder__c.field-meta.xml
<CustomField>
    <fullName>PlacerOrder__c</fullName>
<description>This field is used to store placer order number (CHC LabOrder Identification Number)</description>
    <label>PlacerOrder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>