force-app/main/default/objects/Clinician_Report__c/fields/Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Status__c</fullName>
    <label>Report Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>