force-app/main/default/objects/Clinician_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Clinical_Report_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>isDownloaded__c</columns>
    <columns>PlacerOrder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>